- Fixed a problem with paddings on the weekly booking calendar.
- Fixed a problem with an appointment create time, it shown "Unknown" for Time Formats: "g:i a" and "g:i A".
- Fixed a problem with an appointment date when we add appointment on admin area.
- Fixed a problem with bottom bulk action on "Add-ons" tab.
- Fixed a problem with double cancellation emails.

2018-xx-xx - 2.2.7
-------------------------------
- Added check for service name it can be empty.
- Changed default appointments sorting to "Appointment Date".
- Fixed an export problem for the date range.
- Fixed an export problem for additional fields with HTML entities in a name.
- Fixed a problem with booking, when the site is on HTTP but admin force HTTPS usage.
- Fixed an integration problem with MarketPress plugin.

2018-04-24 - 2.2.6
-------------------------------
- Added ability to delete "Service".
- Added ability to delete "Service Provider".
- Added asterisk to required fields label on appointment form.
- Fixed a problem with appointments details, the start hour of appointment is now depended on settings.
- Fixed a problem with Appointments settings on the BuddyPress profile.
- Fixed a problem with BuddyPress profile integration.
- Fixed a problem with double send reminders.
- Fixed a problem with the tutorial restart.
- Fixed a warning message for ob_end_flush() in an older version of PHP.
- Improved appointments calendars, now start on the day set in WordPress options.

2018-03-27 - 2.2.5
-------------------------------
- Added filter 'app-export-appointment-args' which allows changing export arguments eg. sorting field.
- Fixed incompatibilities with Divi Builder.
- Fixed missing sortings on the frontend.
- Fixed problems with changing the custom time for slots.
- Fixed problem with paddings.
- Fixed re-send confirmation emails.
- Improved Yes/No choice used on appointments configuration screen.

2018-01-29 - 2.2.4
-------------------------------